trunk/Archive2/4f/dcf6e8bd878ffb/output
main.cpp: In instantiation of 'void foo(T) [with T = S]':
main.cpp:12:10:   required from 'void bar(T) [with T = S]'
main.cpp:17:10:   required from here
main.cpp:7:15: error: no match for 'operator<<' (operand types are 'std::ostream {aka std::basic_ostream<char>}' and 'S')
     std::cout << t;
               ^
compilation terminated due to -Wfatal-errors.
