trunk/Archive2/4f/dcf6e8bd878ffb/main.cpp
#include <iostream>

struct S {};

template<typename T>
void foo(T t) {
    std::cout << t;
}

template<typename T>
void bar(T t) {
    foo(t);
}

int main() {
    S s;
    bar(s);
}